fixed gap between images and responsive size on logo in footer

--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -19,6 +19,7 @@ footer {
   z-index: 0;
 }
 .model-4.logo-2 {
+  width: 30%;
   position: absolute;
   top: 89%;
   left: 37%;
