--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -15,7 +15,7 @@ body {
 }
 
 img {
-  width: 100%;
+  width: 100vw;
   height: 100%;
-  /*object-fit: cover;*/
+  display: list-item;
 }
